Fix alignment of transaction details

--- a/budget/static/budget/style.css
+++ b/budget/static/budget/style.css
@@ -149,3 +149,7 @@ form.edit {
 .number {
     text-align: right;
 }
+
+span.number {
+    display: inline-block;
+}
